--- a/hello.ipynb
+++ b/hello.ipynb
@@ -4,29 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hello world!\n"
+    "# Hello Jupyter\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world!\n"
+      "Hello Jupyter\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello world!\")\n"
+    "print(\"Hello Jupyter\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,18 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "合計 56\n",
-      "drwxrwxr-x 2 heiwa heiwa  4096 10月 10 14:54 .\n",
+      "合計 68\n",
+      "drwxrwxr-x 3 heiwa heiwa  4096 10月 10 15:32 .\n",
       "drwxrwxr-x 3 heiwa heiwa  4096 10月 10 14:00 ..\n",
+      "drwxrwxr-x 6 heiwa heiwa  4096 10月 10 15:32 .git\n",
       "-rw-rw-r-- 1 heiwa heiwa   147 10月 10 14:04 .gitattributes\n",
-      "-rw-rw-r-- 1 heiwa heiwa 44825 10月 10 14:54 test1.ipynb\n"
+      "-rw-rw-r-- 1 heiwa heiwa  1697 10月 10 14:56 .gitignnore\n",
+      "-rw-rw-r-- 1 heiwa heiwa   372 10月 10 15:37 README.md\n",
+      "-rw-rw-r-- 1 heiwa heiwa 44764 10月 10 15:32 hello.ipynb\n"
      ]
     }
    ],
@@ -80,13 +83,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +111,7 @@
        " ('rmdir', 'rmdir')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
