--- a/hello.ipynb
+++ b/hello.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,21 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 68\n",
-      "drwxr-xr-x 3 heiwa heiwa  4096 Oct 16 10:21 .\n",
-      "drwxr-xr-x 3 heiwa heiwa  4096 Oct 16 10:21 ..\n",
-      "drwxr-xr-x 8 heiwa heiwa  4096 Oct 16 10:22 .git\n",
-      "-rw-r--r-- 1 heiwa heiwa   146 Oct 16 10:21 .gitattributes\n",
-      "-rw-r--r-- 1 heiwa heiwa  1697 Oct 16 10:21 .gitignnore\n",
-      "-rw-r--r-- 1 heiwa heiwa   785 Oct 16 10:21 README.md\n",
-      "-rw-r--r-- 1 heiwa heiwa 44956 Oct 16 10:21 hello.ipynb\n"
+      "合計 100\n",
+      "drwxrwxr-x 3 heiwa heiwa  4096 10月 18 09:16 .\n",
+      "drwxrwxr-x 3 heiwa heiwa  4096 10月 10 14:00 ..\n",
+      "drwxrwxr-x 6 heiwa heiwa  4096 10月 18 09:17 .git\n",
+      "-rw-rw-r-- 1 heiwa heiwa   146 10月 10 15:46 .gitattributes\n",
+      "-rw-rw-r-- 1 heiwa heiwa  1697 10月 10 14:56 .gitignore\n",
+      "-rw-rw-r-- 1 heiwa heiwa   785 10月 10 15:53 README.md\n",
+      "-rw-rw-r-- 1 heiwa heiwa 75363 10月 18 09:16 hello.ipynb\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        " ('rmdir', 'rmdir')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
