--- a/hello.ipynb
+++ b/hello.ipynb
@@ -16,6 +16,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: numpy in /home/heiwa/.local/lib/python3.10/site-packages (1.26.1)\n",
+      "Requirement already satisfied: matplotlib in /home/heiwa/.local/lib/python3.10/site-packages (3.8.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/heiwa/.local/lib/python3.10/site-packages (from matplotlib) (1.1.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/heiwa/.local/lib/python3.10/site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/heiwa/.local/lib/python3.10/site-packages (from matplotlib) (4.43.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/heiwa/.local/lib/python3.10/site-packages (from matplotlib) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/heiwa/.local/lib/python3.10/site-packages (from matplotlib) (23.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/heiwa/.local/lib/python3.10/site-packages (from matplotlib) (10.1.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/lib/python3/dist-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/heiwa/.local/lib/python3.10/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "\u001b[33mDEPRECATION: distro-info 1.1build1 has a non-standard version number. pip 24.0 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of distro-info or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mDEPRECATION: python-debian 0.1.43ubuntu1 has a non-standard version number. pip 24.0 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of python-debian or contact the author to suggest that they release a version with a conforming version number. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install numpy matplotlib\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Hello Jupyter\n"
      ]
     }
@@ -26,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,31 +145,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "合計 100\n",
-      "drwxrwxr-x 3 heiwa heiwa  4096 10月 20 13:58 .\n",
-      "drwxrwxr-x 3 heiwa heiwa  4096 10月 20 13:58 ..\n",
-      "drwxrwxr-x 8 heiwa heiwa  4096 10月 20 13:59 .git\n",
-      "-rw-rw-r-- 1 heiwa heiwa   146 10月 20 13:58 .gitattributes\n",
-      "-rw-rw-r-- 1 heiwa heiwa  1697 10月 20 13:58 .gitignore\n",
-      "-rw-rw-r-- 1 heiwa heiwa   785 10月 20 13:58 README.md\n",
-      "-rw-rw-r-- 1 heiwa heiwa 75377 10月 20 13:58 hello.ipynb\n"
+      "total 104\n",
+      "drwxrwxr-x 3 heiwa heiwa  4096 Nov 15 10:15 .\n",
+      "drwxrwxr-x 3 heiwa heiwa  4096 Oct 19 11:16 ..\n",
+      "drwxrwxr-x 8 heiwa heiwa  4096 Nov 15 10:18 .git\n",
+      "-rw-rw-r-- 1 heiwa heiwa   146 Oct 19 11:16 .gitattributes\n",
+      "-rw-rw-r-- 1 heiwa heiwa  1697 Oct 19 11:16 .gitignore\n",
+      "-rw-rw-r-- 1 heiwa heiwa   785 Oct 19 11:16 README.md\n",
+      "-rw-rw-r-- 1 heiwa heiwa 78007 Nov 15 10:18 hello.ipynb\n"
      ]
     }
    ],
    "source": [
-    "!ls -la\n"
+    "!LANG=C ls -la\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +196,7 @@
        " ('rmdir', 'rmdir')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
